--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version":"0.0.1",
     "description":"Mongo DB",
     "main":"index.js",
-    "dependencies":{},
+    "dependencies":{"chai":"*","mongodb": "~1.3.19"
+	},
     "devDependencies":{},
     "scripts":{
        "test": "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.x$"
